[metadata]
name = expensify-client
version = 0.0.1
author = Alex Lazich
author_email = lazich.alexander@gmail.com
description = Python wrapper for Expensify API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alazich/expensify-client
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src